# refactor-practice

./: README.md  pyproject.toml  votaciones.py
